# WeatherApp

./: README.md
.net/WeatherApp/: Program.cs  WeatherApp.csproj  appsettings.json
.net/WeatherApp/Application/: DependencyInjection.cs  Mappings.cs
.net/WeatherApp/Application/Abstractions/: IQuery.cs  IQueryHandler.cs
.net/WeatherApp/Application/Weather/Current/: CurrentResponse.cs  CurrentWeatherQuery.cs  CurrentWeatherQueryHandler.cs
.net/WeatherApp/Application/Weather/Forecast/: ForecastResponse.cs  ForecastWeatherQuery.cs  ForecastWeatherQueryHandler.cs
.net/WeatherApp/Domain/Abstractions/: Error.cs  Result.cs
.net/WeatherApp/Domain/Shared/: Temperature.cs  UnitsSystem.cs
.net/WeatherApp/Domain/Weather/: IWeatherApiRepository.cs  Location.cs  WeatherErrors.cs  WeatherInfo.cs
.net/WeatherApp/Infrastructure/: AccuWeatherApiRepository.cs  DependencyInjection.cs  OpenWeatherApiRepository.cs
.net/WeatherApp/Presentation/: DependencyInjection.cs  WeatherFrm.Designer.cs  WeatherFrm.cs
python/: pyproject.toml
python/src/weather/: config.py
python/src/weather/Application/: services.py
python/src/weather/Domain/: model.py  repository.py
python/src/weather/adapters/: openweather_api.py
